--- a/index.html
+++ b/index.html
@@ -1,71 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-<!--  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">-->
-  <link rel="icon" href="images/favicon-32x32.png">
-  <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-<!--
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
--->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" href="images/favicon-32x32.png">
+    <title>Frontend Mentor | Single Price Grid Component</title>
 </head>
 
 <body>
-<section>
-  <div class="container">
+    <section>
+        <div class="container">
 
- <div class="join">
-     <p class="one"> Join our community</p>
+            <div class="join">
+                <p class="one"> Join our community</p>
 
-  <p class="two">30-day, hassle-free money back guarantee</p>
+                <p class="two">30-day, hassle-free money back guarantee</p>
 
-  <p class="three">Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.</p>
-</div>
- 
- <div class="signup"> 
-  <p class="four">Monthly Subscription</p>
+                <p class="three">Gain access to our full library of tutorials along with expert code reviews.
+                    Perfect for any developers who are serious about honing their skills.</p>
+            </div>
 
-     <p class="five">&dollar;29 <span>per month</span> </p>
+            <div class="signup">
+                <p class="four">Monthly Subscription</p>
 
-  <p class="six">Full access for less than &dollar;1 a day</p>
+                <p class="five">&dollar;29 <span>per month</span> </p>
 
-     <a href="#" type="button" class="button">Sign Up </a>
-     
-    </div>
+                <p class="six">Full access for less than &dollar;1 a day</p>
+
+                <a href="#" type="button" class="button">Sign Up </a>
+
+            </div>
 
 
-<div class="why">
-  <p class="seven">Why Us</p>
-  <p class="eight"> 
-  Tutorials by industry experts<br>
-  Peer &amp; expert code review<br>
-  Coding exercises<br>
-  Access to our GitHub repos<br>
-  Community forum<br>
-  Flashcard decks<br>
-  New videos every week<br>
-  </p> 
-  </div>
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | 
-      Coded by <a href="https://www.frontendmentor.io/profile/VJones2112">Veronica</a>.
-    </p>
-  </footer>
-  
-  
-  </div>  
-  </section>
-  
+            <div class="why">
+                <p class="seven">Why Us</p>
+                <p class="eight">
+                    Tutorials by industry experts<br>
+                    Peer &amp; expert code review<br>
+                    Coding exercises<br>
+                    Access to our GitHub repos<br>
+                    Community forum<br>
+                    Flashcard decks<br>
+                    New videos every week<br>
+                </p>
+            </div>
+
+            <footer>
+                <p class="attribution">
+                    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> |
+                    Coded by <a href="https://www.frontendmentor.io/profile/VJones2112">Veronica</a>.
+                </p>
+            </footer>
+
+
+        </div>
+    </section>
+
 </body>
+
 </html>
